fixed spacing

--- a/frontend/src/pages/Chat/components/Messaging/Messaging.css
+++ b/frontend/src/pages/Chat/components/Messaging/Messaging.css
@@ -7,6 +7,7 @@
 .messaging-input {
     margin-left: 10%;
     margin-right: 10%;
+    width: 80%;
 }
 
 .user-message {
